<resources>
    <string name="app_name">baselibrary</string>
    <!-- Strings used for fragments for navigation -->
    <string name="captain_privacy_policy_url">https://shengshuqiang.github.io/2024/01/14/%E8%88%B9%E9%95%BFApp%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96.html</string>
    <string name="captain_privacy">https://shengshuqiang.github.io/assets/captain_privacy.png</string>
    <string name="captain_v">https://shengshuqiang.github.io/assets/captain.v.1.1.100.png</string>
    <string name="ledongli_index_html">sports-gym-client/h5/index.html</string>
    <string name="ledongli_9367_js">/h5/chunk/9367.js</string>
    <string name="ledongli_465_js">/h5/chunk/465.js</string>
    <string name="ledongli_9367_css">/h5/css/9367.css</string>
    <string name="ledongli_app_js">/h5/js/app.js</string>
    <string name="shengshuqiang_weixin">https://shengshuqiang.github.io/assets/shengshuqiang-weixin.jpg</string>
    <string name="privacy_window_message0">亲爱的用户，感谢您使用<b>船长App</b>！</string>
    <string name="privacy_window_message1">我们依据相关法律制定了<a href="https://shengshuqiang.github.io/2024/01/14/%E8%88%B9%E9%95%BFApp%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96.html">《隐私政策》</a>，请您在点击同意之前仔细阅读并充分理解相关条款，其中的重点条款已为您标注。</string>
    <string name="privacy_window_message2">我们将通过向您说明：<a href="https://shengshuqiang.github.io/2024/01/14/%E8%88%B9%E9%95%BFApp%E9%9A%90%E7%A7%81%E6%94%BF%E7%AD%96.html">《隐私政策》</a></string>
    <string name="privacy_window_message3">⑴ 为了您可以更好地享受船长App提供的服务，我们会根据您选择使用的功能，处理对应的必要信息（例如相机、相册、设备状态、读取或写入剪贴板中的文本信息等）。</string>
    <string name="privacy_window_message4">⑵ 您可以对上述信息进行访问、更正、删除，我们也提供了专门的个人信息保护联系方式。</string>
    <string name="privacy_window_message5">⑶ 未经您的授权同意，我们不会将上述信息共享给第三方或用于您未授权的其他用途。</string>
    <string name="privacy_window_permission_message">为了向您提供更好的服务，我们会在您使用相关功能时处理以下权限和信息；涉及系统权限时，我们将通过系统弹窗征求您的授权。</string>
    <string name="toolbar_navigate_up">返回上一页</string>
    <string name="privacy_policy_title">隐私政策</string>

</resources>
